src/FWlib/peripheral_pinctrl.h

typedef enum
{
    UART_PORT_0,
    UART_PORT_1
} uart_port_t;
typedef enum
{
    I2C_PORT_0,
#if ((INGCHIPS_FAMILY == INGCHIPS_FAMILY_918) || (INGCHIPS_FAMILY == INGCHIPS_FAMILY_916))
    I2C_PORT_1
#endif
} i2c_port_t;
typedef enum
{
    SPI_PORT_0,
    SPI_PORT_1
} spi_port_t;
typedef enum
{
    PINCTRL_PULL_DISABLE,
    PINCTRL_PULL_UP,
    PINCTRL_PULL_DOWN
} pinctrl_pull_mode_t;
#define IO_PIN_NUMBER                  32
typedef enum
{
    IO_SOURCE_GENERAL,      
    IO_SOURCE_SPI0_CLK,
    IO_SOURCE_SPI0_DO,
    IO_SOURCE_SPI0_SSN,
    IO_SOURCE_UART0_TXD,
    IO_SOURCE_I2C0_SCL_O,
    IO_SOURCE_I2C0_SDO,
    IO_SOURCE_SPI1_CLK,
    IO_SOURCE_SPI1_DO,
    IO_SOURCE_SPI1_SSN,
    IO_SOURCE_UART1_TXD,
    IO_SOURCE_I2C1_SCL_O,
    IO_SOURCE_I2C1_SDO,
    IO_SOURCE_UART0_RTS,
    IO_SOURCE_UART1_RTS,
    IO_SOURCE_DEBUG_BUS
} io_source_t;
#define IO_SOURCE_MASK      0xF
typedef enum
{
    PINCTRL_SLEW_RATE_FAST,
    PINCTRL_SLEW_RATE_SLOW
} pinctrl_slew_rate_t;
typedef enum
{
    PINCTRL_DRIVE_2mA,
    PINCTRL_DRIVE_4mA,
    PINCTRL_DRIVE_8mA,
    PINCTRL_DRIVE_12mA,
} pinctrl_drive_strength_t;
void PINCTRL_SelUartRxdIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelUartCtsIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelSpiDiIn(const spi_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelSpiClkIn(const spi_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelI2cSclIn(const i2c_port_t port, const uint8_t io_pin_index);
typedef enum
{
    IO_MODE_GPIO,
    IO_MODE_PWM,
    IO_MODE_ANT_SEL
} gio_mode_t;
void PINCTRL_SetGeneralPadMode(const uint8_t io_pin_index, const gio_mode_t mode, const uint8_t pwm_channel, const uint8_t pwm_neg);
void PINCTRL_Pull(const uint8_t io_pin_index, const pinctrl_pull_mode_t mode);
void PINCTRL_SetPadPwmSel(const uint8_t io_pin_index, const uint8_t pwm1_gpio0);
void PINCTRL_SetSlewRate(uint8_t io_pin_index, const pinctrl_slew_rate_t rate);
#define IO_PIN_NUMBER                   42
typedef enum
{
    IO_SOURCE_GPIO                      = 0,
    IO_SOURCE_DEBUG_BUS                 = 1,
    IO_SOURCE_SW_DATA_OUT               = 2,
    IO_SOURCE_SPI0_CLK_OUT              = 3,
    IO_SOURCE_SPI0_CSN_OUT              = 4,
    IO_SOURCE_SPI0_HOLD_OUT             = 5,
    IO_SOURCE_SPI0_WP_OUT               = 6,
    IO_SOURCE_SPI0_MISO_OUT             = 7,
    IO_SOURCE_SPI0_MOSI_OUT             = 8,
    IO_SOURCE_SPI1_CLK_OUT              = 9,
    IO_SOURCE_SPI1_CSN_OUT              = 10,
    IO_SOURCE_SPI1_MISO_OUT             = 11,
    IO_SOURCE_SPI1_MOSI_OUT             = 12,
    IO_SOURCE_SPI1_HOLD_OUT             = 13,
    IO_SOURCE_SPI1_WP_OUT               = 14,
    IO_SOURCE_IR_WAKEUP                 = 15,
    IO_SOURCE_IR_DATA_OUT               = 16,
    IO_SOURCE_I2S_BCLK_OUT              = 17,
    IO_SOURCE_I2S_LRCLK_OUT             = 18,
    IO_SOURCE_I2S_DATA_OUT              = 19,
    IO_SOURCE_UART0_TXD                 = 20,
    IO_SOURCE_UART0_RTS                 = 21,
    IO_SOURCE_UART1_TXD                 = 22,
    IO_SOURCE_UART1_RTS                 = 23,
    IO_SOURCE_I2C0_SCL_OUT              = 24,
    IO_SOURCE_I2C0_SDA_OUT              = 25,
    IO_SOURCE_I2C1_SCL_OUT              = 26,
    IO_SOURCE_I2C1_SDA_OUT              = 27,
    IO_SOURCE_TIMER0_PWM0_A                    = 28,
    IO_SOURCE_TIMER0_PWM0_B                    = 29,
    IO_SOURCE_TIMER0_PWM1_A                    = 30,
    IO_SOURCE_TIMER0_PWM1_B                    = 31,
    IO_SOURCE_TIMER1_PWM0_A                    = 32,
    IO_SOURCE_TIMER1_PWM0_B                    = 33,
    IO_SOURCE_TIMER1_PWM1_A                    = 34,
    IO_SOURCE_TIMER1_PWM1_B                    = 35,
    IO_SOURCE_TIMER2_PWM0_A                    = 36,
    IO_SOURCE_TIMER2_PWM0_B                    = 37,
    IO_SOURCE_TIMER2_PWM1_A                    = 38,
    IO_SOURCE_TIMER2_PWM1_B                    = 39,
    IO_SOURCE_PWM0_A                    = 40,
    IO_SOURCE_PWM0_B                    = 41,
    IO_SOURCE_PWM1_A                    = 42,
    IO_SOURCE_PWM1_B                    = 43,
    IO_SOURCE_PWM2_A                    = 44,
    IO_SOURCE_PWM2_B                    = 45,
    IO_SOURCE_ANT_SW0                   = 46,
    IO_SOURCE_ANT_SW1                   = 47,
    IO_SOURCE_ANT_SW2                   = 48,
    IO_SOURCE_ANT_SW3                   = 49,
    IO_SOURCE_ANT_SW4                   = 50,
    IO_SOURCE_ANT_SW5                   = 51,
    IO_SOURCE_ANT_SW6                   = 52,
    IO_SOURCE_ANT_SW7                   = 53,
    IO_SOURCE_PA_TXEN                   = 54,
    IO_SOURCE_PA_RXEN                   = 55,
    IO_SOURCE_PDM_DMIC_MCLK             = 56,
    IO_SOURCE_KEYSCN_ROW_0              = 57,
    IO_SOURCE_KEYSCN_ROW_1              = 58,
    IO_SOURCE_KEYSCN_ROW_2              = 59,
    IO_SOURCE_KEYSCN_ROW_3              = 60,
    IO_SOURCE_KEYSCN_ROW_4              = 61,
    IO_SOURCE_KEYSCN_ROW_5              = 62,
    IO_SOURCE_KEYSCN_ROW_6              = 63,
    IO_SOURCE_KEYSCN_ROW_7              = 64,
    IO_SOURCE_KEYSCN_ROW_8              = 65,
    IO_SOURCE_KEYSCN_ROW_9              = 66,
    IO_SOURCE_KEYSCN_ROW_10             = 67,
    IO_SOURCE_KEYSCN_ROW_11             = 68,
    IO_SOURCE_KEYSCN_ROW_12             = 69,
    IO_SOURCE_KEYSCN_ROW_13             = 70,
    IO_SOURCE_KEYSCN_ROW_14             = 71,
    IO_SOURCE_KEYSCN_ROW_15             = 72,
    IO_SOURCE_KEYSCN_ROW_16             = 73,
    IO_SOURCE_KEYSCN_ROW_17             = 74,
    IO_SOURCE_KEYSCN_ROW_18             = 75,
    IO_SOURCE_KEYSCN_ROW_19             = 76,
    IO_SOURCE_SPI2AHB_DATA_OUT          = 77,
    IO_SOURCE_QDEC_TIMER_EXT_OUT0_A     = 78,
    IO_SOURCE_QDEC_TIMER_EXT_OUT1_A     = 79,
    IO_SOURCE_QDEC_TIMER_EXT_OUT2_A     = 80,
    IO_SOURCE_QDEC_TIMER_EXT_OUT0_B     = 81,
    IO_SOURCE_QDEC_TIMER_EXT_OUT1_B     = 82,
    IO_SOURCE_QDEC_TIMER_EXT_OUT2_B     = 83,
    IO_SOURCE_SW_DIO                      = 84,
    IO_SOURCE_SW_CLK                      = 85,
    IO_SOURCE_SPI0_CLK_IN                 = 86,
    IO_SOURCE_SPI0_CSN_IN                 = 87,
    IO_SOURCE_SPI0_HOLD_IN                = 88,
    IO_SOURCE_SPI0_WP_IN                  = 89,
    IO_SOURCE_SPI0_MISO_IN                = 90,
    IO_SOURCE_SPI0_MOSI_IN                = 91,
    IO_SOURCE_SPI1_CLK_IN                 = 92,
    IO_SOURCE_SPI1_CSN_IN                 = 93,
    IO_SOURCE_SPI1_MISO_IN                = 94,
    IO_SOURCE_SPI1_MOSI_IN                = 95,
    IO_SOURCE_SPI1_HOLD_IN                = 96,
    IO_SOURCE_SPI1_WP_IN                  = 97,
    IO_SOURCE_IR_DATA_IN                  = 98,
    IO_SOURCE_I2S_BCLK_IN                 = 99,
    IO_SOURCE_I2S_LRCLK_IN                = 100,
    IO_SOURCE_I2S_DATA_IN                 = 101,
    IO_SOURCE_UART0_RXD                   = 102,
    IO_SOURCE_UART0_CTS                   = 103,
    IO_SOURCE_UART1_RXD                   = 104,
    IO_SOURCE_UART1_CTS                   = 105,
    IO_SOURCE_I2C0_SCL_IN                 = 106,
    IO_SOURCE_I2C0_SDA_IN                 = 107,
    IO_SOURCE_I2C1_SCL_IN                 = 108,
    IO_SOURCE_I2C1_SDA_IN                 = 109,
    IO_SOURCE_PDM_DMIC_IN                 = 110,
    IO_SOURCE_KEYSCN_IN_COL_0             = 111,
    IO_SOURCE_KEYSCN_IN_COL_1             = 112,
    IO_SOURCE_KEYSCN_IN_COL_2             = 113,
    IO_SOURCE_KEYSCN_IN_COL_3             = 114,
    IO_SOURCE_KEYSCN_IN_COL_4             = 115,
    IO_SOURCE_KEYSCN_IN_COL_5             = 116,
    IO_SOURCE_KEYSCN_IN_COL_6             = 117,
    IO_SOURCE_KEYSCN_IN_COL_7             = 118,
    IO_SOURCE_KEYSCN_IN_COL_8             = 119,
    IO_SOURCE_KEYSCN_IN_COL_9             = 120,
    IO_SOURCE_KEYSCN_IN_COL_10            = 121,
    IO_SOURCE_KEYSCN_IN_COL_11            = 122,
    IO_SOURCE_KEYSCN_IN_COL_12            = 123,
    IO_SOURCE_KEYSCN_IN_COL_13            = 124,
    IO_SOURCE_KEYSCN_IN_COL_14            = 125,
    IO_SOURCE_KEYSCN_IN_COL_15            = 126,
    IO_SOURCE_KEYSCN_IN_COL_16            = 127,
    IO_SOURCE_KEYSCN_IN_COL_17            = 128,
    IO_SOURCE_KEYSCN_IN_COL_18            = 129,
    IO_SOURCE_KEYSCN_IN_COL_19            = 130,
    IO_SOURCE_SPI2AHB_SCLK                = 131,
    IO_SOURCE_SPI2AHB_CS                  = 132,
    IO_SOURCE_SPI2AHB_DI                  = 133,
    IO_SOURCE_QDEC_PHASEA                 = 134,
    IO_SOURCE_QDEC_PHASEB                 = 135,
    IO_SOURCE_QDEC_INDEX                  = 136,
    IO_SOURCE_QDEC_EXT_IN_CLK             = 137,
    IO_SOURCE_QDEC_TIMER_EXT_IN1_A        = 138,
    IO_SOURCE_QDEC_TIMER_EXT_IN2_A        = 139,
    IO_SOURCE_QDEC_TIMER_EXT_IN2_B        = 140,
    IO_SOURCE_PCAP0_IN                    = 141,
    IO_SOURCE_PCAP1_IN                    = 142,
    IO_SOURCE_PCAP2_IN                    = 143,
    IO_SOURCE_PCAP3_IN                    = 144,
    IO_SOURCE_PCAP4_IN                    = 145,
    IO_SOURCE_PCAP5_IN                    = 146,
    IO_SOURCE_NUMBER
} io_source_t;
#define IO_SOURCE_GENERAL           IO_SOURCE_GPIO
#define IO_SOURCE_SPI0_CLK          IO_SOURCE_SPI0_CLK_OUT
#define IO_SOURCE_SPI0_DO           IO_SOURCE_SPI0_MOSI_OUT
#define IO_SOURCE_SPI0_SSN          IO_SOURCE_SPI0_CSN_OUT
#define IO_SOURCE_I2C0_SCL_O        IO_SOURCE_I2C0_SCL_OUT
#define IO_SOURCE_I2C0_SDO          IO_SOURCE_I2C0_SDA_OUT
#define IO_SOURCE_SPI1_CLK          IO_SOURCE_SPI1_CLK_OUT
#define IO_SOURCE_SPI1_DO           IO_SOURCE_SPI1_MOSI_OUT
#define IO_SOURCE_SPI1_SSN          IO_SOURCE_SPI1_CSN_OUT
#define IO_SOURCE_I2C1_SCL_O        IO_SOURCE_I2C1_SCL_OUT
#define IO_SOURCE_I2C1_SDO          IO_SOURCE_I2C1_SDA_OUT
#define IO_SOURCE_MASK      0x3F
typedef enum
{
    PINCTRL_DRIVE_2mA,
    PINCTRL_DRIVE_4mA,
    PINCTRL_DRIVE_8mA,
    PINCTRL_DRIVE_12mA,
} pinctrl_drive_strength_t;
void PINCTRL_SelUartRxdIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelUartCtsIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelI2cSclIn(const i2c_port_t port, const uint8_t io_pin_index);
int PINCTRL_Pull(const uint8_t io_pin, const pinctrl_pull_mode_t mode);
#define IO_PIN_NUMBER                   42
typedef enum
{
    IO_SOURCE_GPIO                                     = 0,
    IO_SOURCE_DEBUG_BUS                                = 1,
    IO_SOURCE_SW_DATA_OUT                              = 2,
    IO_SOURCE_SPI0_CLK_OUT                             = 3,
    IO_SOURCE_SPI0_CSN_OUT                             = 4,
    IO_SOURCE_SPI0_HOLD_OUT                            = 5,
    IO_SOURCE_SPI0_WP_OUT                              = 6,
    IO_SOURCE_SPI0_MISO_OUT                            = 7,
    IO_SOURCE_SPI0_MOSI_OUT                            = 8,
    IO_SOURCE_SPI1_CLK_OUT                             = 9,
    IO_SOURCE_SPI1_CSN_OUT                             = 10,
    IO_SOURCE_SPI1_MISO_OUT                            = 11,
    IO_SOURCE_SPI1_MOSI_OUT                            = 12,
    IO_SOURCE_SPI1_HOLD_OUT                            = 13,
    IO_SOURCE_SPI1_WP_OUT                              = 14,
    IO_SOURCE_UART0_TXD                                = 15,
    IO_SOURCE_UART0_RTS                                = 16,
    IO_SOURCE_UART1_TXD                                = 17,
    IO_SOURCE_UART1_RTS                                = 18,
    IO_SOURCE_I2C0_SCL_OUT                             = 19,
    IO_SOURCE_I2C0_SDA_OUT                             = 20,
    IO_SOURCE_I2S_BCLK_OUT                             = 21,
    IO_SOURCE_I2S_LRCLK_OUT                            = 22,
    IO_SOURCE_I2S_DATA_OUT                             = 23,
    IO_SOURCE_TIMER0_PWM0_A                            = 24,
    IO_SOURCE_TIMER0_PWM0_B                            = 25,
    IO_SOURCE_TIMER0_PWM1_A                            = 26,
    IO_SOURCE_TIMER0_PWM1_B                            = 27,
    IO_SOURCE_TIMER1_PWM0_A                            = 28,
    IO_SOURCE_TIMER1_PWM0_B                            = 29,
    IO_SOURCE_TIMER1_PWM1_A                            = 30,
    IO_SOURCE_TIMER1_PWM1_B                            = 31,
    IO_SOURCE_PWM0_A                                   = 32,
    IO_SOURCE_PWM0_B                                   = 33,
    IO_SOURCE_PWM1_A                                   = 34,
    IO_SOURCE_PWM1_B                                   = 35,
    IO_SOURCE_PWM2_A                                   = 36,
    IO_SOURCE_PWM2_B                                   = 37,
    IO_SOURCE_ANT_SW0                                  = 38,
    IO_SOURCE_ANT_SW1                                  = 39,
    IO_SOURCE_ANT_SW2                                  = 40,
    IO_SOURCE_ANT_SW3                                  = 41,
    IO_SOURCE_ANT_SW4                                  = 42,
    IO_SOURCE_ANT_SW5                                  = 43,
    IO_SOURCE_ANT_SW6                                  = 44,
    IO_SOURCE_ANT_SW7                                  = 45,
    IO_SOURCE_PA_TXEN                                  = 46,
    IO_SOURCE_PA_RXEN                                  = 47,
    IO_SOURCE_KEYSCN_ROW_0                             = 48,
    IO_SOURCE_KEYSCN_ROW_1                             = 49,
    IO_SOURCE_KEYSCN_ROW_2                             = 50,
    IO_SOURCE_KEYSCN_ROW_3                             = 51,
    IO_SOURCE_KEYSCN_ROW_4                             = 52,
    IO_SOURCE_KEYSCN_ROW_5                             = 53,
    IO_SOURCE_KEYSCN_ROW_6                             = 54,
    IO_SOURCE_KEYSCN_ROW_7                             = 55,
    IO_SOURCE_KEYSCN_COL_0                             = 56,
    IO_SOURCE_KEYSCN_COL_1                             = 57,
    IO_SOURCE_KEYSCN_COL_2                             = 58,
    IO_SOURCE_KEYSCN_COL_3                             = 59,
    IO_SOURCE_KEYSCN_COL_4                             = 60,
    IO_SOURCE_KEYSCN_COL_5                             = 61,
    IO_SOURCE_KEYSCN_COL_6                             = 62,
    IO_SOURCE_KEYSCN_COL_7                             = 63,
    IO_SOURCE_KEYSCN_COL_8                             = 64,
    IO_SOURCE_KEYSCN_COL_9                             = 65,
    IO_SOURCE_KEYSCN_COL_10                            = 66,
    IO_SOURCE_KEYSCN_COL_11                            = 67,
    IO_SOURCE_KEYSCN_COL_12                            = 68,
    IO_SOURCE_KEYSCN_COL_13                            = 69,
    IO_SOURCE_KEYSCN_COL_14                            = 70,
    IO_SOURCE_KEYSCN_COL_15                            = 71,
    IO_SOURCE_KEYSCN_COL_16                            = 72,
    IO_SOURCE_KEYSCN_COL_17                            = 73,
    IO_SOURCE_KEYSCN_COL_18                            = 74,
    IO_SOURCE_KEYSCN_COL_19                            = 75,
    IO_SOURCE_KEYSCN_COL_20                            = 76,
    IO_SOURCE_KEYSCN_COL_21                            = 77,
    IO_SOURCE_QDEC_TIMER_EXT_OUT0_A                    = 78,
    IO_SOURCE_QDEC_TIMER_EXT_OUT1_A                    = 79,
    IO_SOURCE_QDEC_TIMER_EXT_OUT2_A                    = 80,
    IO_SOURCE_QDEC_TIMER_EXT_OUT0_B                    = 81,
    IO_SOURCE_QDEC_TIMER_EXT_OUT1_B                    = 82,
    IO_SOURCE_QDEC_TIMER_EXT_OUT2_B                    = 83,
    IO_SOURCE_UART0_SIR                                = 84,
    IO_SOURCE_UART1_SIR                                = 85,
    IO_SOURCE_ASDM_DMIC_MCLK                           = 86,
    IO_SOURCE_SW_DIO                                   = 87,
    IO_SOURCE_SW_CLK                                   = 88,
    IO_SOURCE_SPI0_CLK_IN                              = 89,
    IO_SOURCE_SPI0_CSN_IN                              = 90,
    IO_SOURCE_SPI0_HOLD_IN                             = 91,
    IO_SOURCE_SPI0_WP_IN                               = 92,
    IO_SOURCE_SPI0_MISO_IN                             = 93,
    IO_SOURCE_SPI0_MOSI_IN                             = 94,
    IO_SOURCE_SPI1_CLK_IN                              = 95,
    IO_SOURCE_SPI1_CSN_IN                              = 96,
    IO_SOURCE_SPI1_MISO_IN                             = 97,
    IO_SOURCE_SPI1_MOSI_IN                             = 98,
    IO_SOURCE_SPI1_HOLD_IN                             = 99,
    IO_SOURCE_SPI1_WP_IN                               = 100,
    IO_SOURCE_UART0_RXD                                = 101,
    IO_SOURCE_UART0_CTS                                = 102,
    IO_SOURCE_UART1_RXD                                = 103,
    IO_SOURCE_UART1_CTS                                = 104,
    IO_SOURCE_I2C0_SCL_IN                              = 105,
    IO_SOURCE_I2C0_SDA_IN                              = 106,
    IO_SOURCE_I2S_BCLK_IN                              = 107,
    IO_SOURCE_I2S_LRCLK_IN                             = 108,
    IO_SOURCE_I2S_DATA_IN                              = 109,
    IO_SOURCE_KEYSCN_IN_COL_0                          = 110,
    IO_SOURCE_KEYSCN_IN_COL_1                          = 111,
    IO_SOURCE_KEYSCN_IN_COL_2                          = 112,
    IO_SOURCE_KEYSCN_IN_COL_3                          = 113,
    IO_SOURCE_KEYSCN_IN_COL_4                          = 114,
    IO_SOURCE_KEYSCN_IN_COL_5                          = 115,
    IO_SOURCE_KEYSCN_IN_COL_6                          = 116,
    IO_SOURCE_KEYSCN_IN_COL_7                          = 117,
    IO_SOURCE_KEYSCN_IN_COL_8                          = 118,
    IO_SOURCE_KEYSCN_IN_COL_9                          = 119,
    IO_SOURCE_KEYSCN_IN_COL_10                         = 120,
    IO_SOURCE_KEYSCN_IN_COL_11                         = 121,
    IO_SOURCE_KEYSCN_IN_COL_12                         = 122,
    IO_SOURCE_KEYSCN_IN_COL_13                         = 123,
    IO_SOURCE_KEYSCN_IN_COL_14                         = 124,
    IO_SOURCE_KEYSCN_IN_COL_15                         = 125,
    IO_SOURCE_KEYSCN_IN_COL_16                         = 126,
    IO_SOURCE_KEYSCN_IN_COL_17                         = 127,
    IO_SOURCE_KEYSCN_IN_COL_18                         = 128,
    IO_SOURCE_KEYSCN_IN_COL_19                         = 129,
    IO_SOURCE_KEYSCN_IN_COL_20                         = 130,
    IO_SOURCE_KEYSCN_IN_COL_21                         = 131,
    IO_SOURCE_KEYSCN_IN_ROW_0                          = 132,
    IO_SOURCE_KEYSCN_IN_ROW_1                          = 133,
    IO_SOURCE_KEYSCN_IN_ROW_2                          = 134,
    IO_SOURCE_KEYSCN_IN_ROW_3                          = 135,
    IO_SOURCE_KEYSCN_IN_ROW_4                          = 136,
    IO_SOURCE_KEYSCN_IN_ROW_5                          = 137,
    IO_SOURCE_KEYSCN_IN_ROW_6                          = 138,
    IO_SOURCE_KEYSCN_IN_ROW_7                          = 139,
    IO_SOURCE_QDEC_PHASEA                              = 140,
    IO_SOURCE_QDEC_PHASEB                              = 141,
    IO_SOURCE_QDEC_INDEX                               = 142,
    IO_SOURCE_QDEC_EXT_IN_CLK                          = 143,
    IO_SOURCE_QDEC_TIMER_EXT_IN1_A                     = 144,
    IO_SOURCE_QDEC_TIMER_EXT_IN2_A                     = 145,
    IO_SOURCE_QDEC_TIMER_EXT_IN2_B                     = 146,
    IO_SOURCE_PCAP0_IN                                 = 147,
    IO_SOURCE_PCAP1_IN                                 = 148,
    IO_SOURCE_PCAP2_IN                                 = 149,
    IO_SOURCE_PCAP3_IN                                 = 150,
    IO_SOURCE_PCAP4_IN                                 = 151,
    IO_SOURCE_PCAP5_IN                                 = 152,
    IO_SOURCE_UART0_SIR_IN                             = 153,
    IO_SOURCE_UART1_SIR_IN                             = 154,
    IO_SOURCE_ASDM_DMIC_IN                             = 155,
    IO_SOURCE_NUMBER
} io_source_t;
#define IO_SOURCE_GENERAL           IO_SOURCE_GPIO
#define IO_SOURCE_SPI0_CLK          IO_SOURCE_SPI0_CLK_OUT
#define IO_SOURCE_SPI0_DO           IO_SOURCE_SPI0_MOSI_OUT
#define IO_SOURCE_SPI0_SSN          IO_SOURCE_SPI0_CSN_OUT
#define IO_SOURCE_I2C0_SCL_O        IO_SOURCE_I2C0_SCL_OUT
#define IO_SOURCE_I2C0_SDO          IO_SOURCE_I2C0_SDA_OUT
#define IO_SOURCE_SPI1_CLK          IO_SOURCE_SPI1_CLK_OUT
#define IO_SOURCE_SPI1_DO           IO_SOURCE_SPI1_MOSI_OUT
#define IO_SOURCE_SPI1_SSN          IO_SOURCE_SPI1_CSN_OUT
#define IO_SOURCE_MASK      0x3F
typedef enum
{
    PINCTRL_DRIVE_2mA,
    PINCTRL_DRIVE_4mA,
    PINCTRL_DRIVE_8mA,
    PINCTRL_DRIVE_12mA,
} pinctrl_drive_strength_t;
void PINCTRL_SelUartRxdIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelUartCtsIn(const uart_port_t port, const uint8_t io_pin_index);
void PINCTRL_SelI2cSclIn(const i2c_port_t port, const uint8_t io_pin_index);
int PINCTRL_Pull(const uint8_t io_pin, const pinctrl_pull_mode_t mode);
int PINCTRL_SetPadMux(const uint8_t io_pin_index, const io_source_t source);
void PINCTRL_DisableAllInputs(void);
void PINCTRL_SetDriveStrength(const uint8_t io_pin_index, const pinctrl_drive_strength_t strength);